# Ripple

./: .gitignore  Anchor.toml  Cargo.toml  README.md  index.html  styles.css  vercel.json
.superstack/: idea-context.md
backend/: .env  .env.example  package-lock.json  package.json
backend/api/: index.js
backend/src/: app.js  server.js  verifyTransfer.js
programs/ripple/: Cargo.toml
programs/ripple/src/: lib.rs
waitlist/: index.html  package-lock.json  package.json
waitlist/server/: Waitlist.js  db.js  index.js
waitlist/src/: App.tsx  index.css
web/: .env.example  index.html  package-lock.json  package.json  styles.css
web/src/: App.tsx  WalletProviders.tsx  main.tsx  styles.css  vite-env.d.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/dashboard/: page.tsx
web/src/app/discover/: page.tsx
web/src/app/history/: page.tsx
web/src/components/layout/: AppChrome.tsx  FloatingCoins.tsx  SiteHeader.tsx
web/src/components/ui/: GlassCard.tsx
web/src/components/wallet/: WalletButton.tsx
web/src/contexts/: WalletContext.tsx
web/src/hooks/: useRippleData.ts
web/src/idl/: ripple.json
web/src/layouts/: DashboardShell.tsx
web/src/lib/: api.ts  chain.ts  connection.ts  constants.ts  env.ts  ipfs.ts  metadata.ts  payment.ts  productUtils.ts  purchase.ts  richDescription.tsx  store.ts
web/src/pages/dashboard/: DashboardConnectScreen.tsx  DashboardDiscoverPage.tsx  DashboardEditProductPage.tsx  DashboardHomePage.tsx  DashboardNewProductPage.tsx  (+4 more)
web/src/types/: phantom.d.ts  product.ts  window-app.d.ts
(+2 files in other folders)
