[package]
name = "ripple"
version = "0.1.0"
description = "Ripple — creator monetization on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ripple"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
